--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -26,7 +26,7 @@
 					id="searchField"
 					tooltip="Enter a string and press enter"
 					search="onFilter"
-					width="auto">
+					width="50%">
 				</SearchField>
 			</Toolbar>
 		</semantic:subHeader>
